--- a/client/player.html
+++ b/client/player.html
@@ -28,12 +28,21 @@
     </div>
     <div class="translation-card">
         <div class="pull-down" id="translation-pull-down"></div>
-        <div class="language-btn" id="not-available">No tranlation available</div>
+        <div class="loading-animation">
+            <div class="c"></div>
+            <div class="c"></div>
+            <div class="c"></div>
+            <div class="c"></div>
+        </div>
+        <div class="language-btn" id="not-available">No lyrics available</div>
+        <div class="language-btn" id="original">Original <img src="assets/Original.svg" alt="Original"></div>
         <div class="language-btn" id="korean">Korean <img src="assets/Korea.svg" alt="Korean"></div>    
         <div class="language-btn" id="romanized">Romanized <img src="assets/United_nations.svg" alt="Romanized"></div>    
         <div class="language-btn" id="english">English <img src="assets/America.svg" alt="English"></div>    
         <div class="language-btn" id="japanese">Japanese <img src="assets/Japan.svg" alt="japanese"></div>
         <div class="language-btn" id="chinese">Chinese <img src="assets/China.svg" alt="Chinese"></div>
+        <div class="language-btn" id="french">French <img src="assets/France.svg" alt="French"></div>
+    </body>
     </div>
     <div class="lyrics-card">
         <div class="pull-down" id="lyrics-pull-down"></div>
