--- a/client/index.html
+++ b/client/index.html
@@ -1,50 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lyrics App</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index-style.css">
-</head>
-<body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="index-style.css" />
+  </head>
+  <body>
     <div class="main-screen">
-        <h1>LyricsPlayer</h1>
-        <p id="subtext">Powered by</p>
-        <img id="spotify-logo" src="assets/spotify_logo.svg" alt="spotify-logo">
-        <img id="illustration" src="assets/undraw_music_r1se 1.svg" alt="illustration">
-        <div id="action-text">start listening now</div>
-        <div id="action-button">
-            <div id="action-label">Get Started</div>
-        </div>
+      <h1>LyricsPlayer</h1>
+      <p id="subtext">Powered by</p>
+      <img id="spotify-logo" src="assets/spotify_logo.svg" alt="spotify-logo" />
+      <img
+        id="illustration"
+        src="assets/undraw_music_r1se 1.svg"
+        alt="illustration"
+      />
+      <div id="action-text">start listening now</div>
+      <div id="action-button">
+        <div id="action-label">Get Started</div>
+      </div>
     </div>
     <div class="loading-screen">
-        <div class="pop-up-card">    
-            <div class="loading-animation">
-                <div class="c"></div>
-                <div class="c"></div>
-                <div class="c"></div>
-                <div class="c"></div>
-            </div>
+      <div class="pop-up-card">
+        <div class="loading-animation">
+          <div class="c"></div>
+          <div class="c"></div>
+          <div class="c"></div>
+          <div class="c"></div>
         </div>
+      </div>
     </div>
-</body>
-<script>
-    const electron = require('electron');
-    const {ipcRenderer} = electron; 
-    const action_button = document.querySelector('#action-button');
+  </body>
+  <script>
+    const action_button = document.querySelector("#action-button");
 
     if (navigator.onLine) {
-        document.getElementById('action-button').addEventListener('click',() => {
-            document.querySelector('.loading-screen').style.display = "flex";
-            document.querySelector('.main-screen').style.filter = "blur(2px)";
-            ipcRenderer.send('login', {});
-        });
+      document.getElementById("action-button").addEventListener("click", () => {
+        document.querySelector(".loading-screen").style.display = "flex";
+        document.querySelector(".main-screen").style.filter = "blur(2px)";
+        window.electronAPI.login();
+      });
     } else {
-        window.alert("No Internet Connection");
-        document.querySelector('#action-label').innerText = "No Connection";
-        action_button.style.background = "#e57373";
-        action_button.style.borderColor = "#e57373";
+      window.alert("No Internet Connection");
+      document.querySelector("#action-label").innerText = "No Connection";
+      action_button.style.background = "#e57373";
+      action_button.style.borderColor = "#e57373";
     }
-</script>
+  </script>
 </html>
